fixed alignment

--- a/src/app/differential/numpad/numpad.component.scss
+++ b/src/app/differential/numpad/numpad.component.scss
@@ -154,6 +154,7 @@ $greyHover: #c2c2c2;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   .cell-name {
     font-weight: 300;
     font-size: clamp(0.7rem, 1vw, 0.9rem);
